# Perona

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml
src/: main.rs
src/commands/: customizations.rs  funnies.rs  funny.rs  general.rs  mod.rs  moderation.rs  utilities.rs
src/utilities/: embeds.rs  functions.rs  structures.rs
tests/: database_test.rs
