[package]
name = "perona"
version = "1.7.2"
authors = ["Nuke <86313547+NukeZzZin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.11.6" }
tokio = { version = "1.29.1", features = ["full"] }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.6.0" }
serde = { version = "1.0.175" }
