[package]
name = "perona"
version = "1.7.2"
authors = ["Nuke <86313547+NukeZzZin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serenity = { version = "0.11.7" }
tokio = { version = "1.33.0", features = ["full"] }
dotenv = { version = "0.15.0" }
mongodb = { version = "2.7.1" }
serde = { version = "1.0.190" }
chrono = { version = "0.4.31" }
rand = { version = "0.8.5" }
